--- a/package.json
+++ b/package.json
@@ -7,6 +7,17 @@
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/braedenkinggg/VenusBot.git"
+  },
+  "keywords": [
+    "node.js", 
+    "discord.js", 
+    "javascript", 
+    "discord", 
+    "bot"
+  ],
   "author": "Braeden King",
   "license": "GPL-2.0",
   "dependencies": {
@@ -14,6 +25,7 @@
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord-api-types": "^0.24.0",
     "discord.js": "^13.2.0",
+    "dotenv": "^10.0.0",
     "fs": "^0.0.1-security"
   },
   "devDependencies": {
