--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   ],
   "author": "Braeden King",
   "license": "GPL-2.0",
+  "engines": {
+    "node": "16.x",
+    "npm": "7.x"
+  },
   "dependencies": {
     "@discordjs/builders": "^0.7.0",
     "@discordjs/rest": "^0.1.0-canary.0",
