--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "author": "Braeden King",
   "license": "GPL-2.0",
   "engines": {
-    "node": "16.x",
-    "npm": "7.x"
+    "node": "16.13.1",
+    "npm": "8.3.0"
   },
   "dependencies": {
     "@discordjs/builders": "^0.7.0",
